poke/testsuite/poke.pkl/cast-offsets-diag-2.pk
/* { dg-do compile } */

defvar x = "23#B" as offset<int,B>; /* { dg-error "not allowed" } */
